--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+title: EMF-Syncer
+#description: EMF-Syncer
+logo: ./images/icon-emf-syncer.png
+#google_analytics: UA-78418237-2
